--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "firebase": "^8.2.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "reactfire": "^3.0.0-rc.0",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
